Add product, audit, unit tests

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -7,5 +7,12 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": ""
+    },
+    "Jwt": {
+        "Key": "",
+        "Issuer": ""
+    },
+    "Vat": {
+        "Value": 0
     }
 }
