--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -8,5 +8,12 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": ""
+    },
+    "Jwt": {
+        "Key": "",
+        "Issuer": ""
+    },
+    "Vat": {
+        "Value": 0
     }
 }
